k8s/web.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: phoenix
          image: gcr.io/hexlet-basics/app
          ports:
            - containerPort: 3000
